# keydompy

./: README.md  config.py  keydom.py  pyproject.toml
.github/workflows/: python-package.yml
src/keydom/: __init__.py  keydom.py
