[project]
name = "keydom"
version = "0.1"
authors = [
  { name="drcoccodrillus", email="dr.coccodrillus@gmail.com" },
]
description = "Tools for managing Keydom Access Control System"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/drcoccodrillus/keydompy"
Issues = "https://github.com/drcoccodrillus/keydompy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
